--- a/package.json
+++ b/package.json
@@ -2,11 +2,11 @@
   "name": "simple-pokemon-rest-api-withoutdb",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "./server/index.js",
   "type": "module",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "nodemon index.js"
+    "dev": "nodemon ./server/index.js"
   },
   "repository": {
     "type": "git",
